# FixitPy

./: .readthedocs.yaml  README.md  pyproject.toml
doc_source/: conf.py
docs/: conf.py  documentation.rst  index.rst  requirements.txt  searchindex.js  usage.rst
docs/.doctrees/: documentation.doctree  environment.pickle  index.doctree  usage.doctree
fixitpy/: __init__.py  guides.py  retrieve_guide.py  retrieve_media.py
tests/: retrieval.py
