# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixitpy"
version = "26.1.0"
description = "A small example package"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "requests",
]

[tool.hatch.metadata]
allow-direct-references = true